<resources>
    <string name="app_name" translatable="false">Survive The Day</string>
    <string name="app_owner" translatable="false">© Kevin Riedl, 2018</string>
    <string name="app_owner_mail" translatable="false">kevin.riedl.privat@gmail.com</string>
    <string name="app_version_label">App-Version: </string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_modify_countdown">Create/Edit a countdown</string>
    <string name="actionBar_mainActivity_menu_addNewCountdown">Add new</string>
    <string name="actionBar_mainActivity_menu_deleteAllCountdowns">Delete all</string>
    <string name="actionBar_mainActivity_menu_removeAdsTemporarily">Remove Ads temporary</string>
    <string name="actionBar_mainActivity_menu_showInAppProducts">In-App-Products</string>
    <string name="actionBar_countdownActivity_menu_shareCountdown_title">Share</string>
    <string name="actionBar_countdownActivity_menu_shareCountdown_shareContent_text">The moment you just have %1$s seconds for %2$s (%3$s)! Do you also need motivation? SurviveTheDay is now available on Playstore for free!</string>
    <string name="button_save">Save</string>
    <string name="button_abort">Abort</string>
    <string name="underConstruction_countdownActivity_countdownData_shareQuotes_titleLbl">Still under construction</string>
    <string name="underConstruction_countdownActivity_countdownData_shareQuotes_descriptionLbl">In future you might be able to share quotes :)</string>
    <string name="error_title_systemError">System error</string>
    <string name="error_contactAdministrator">Operation failed. Please contact administrator.</string>
    <string name="error_noInternetConnection">Please check your internet connection!</string>
    <string name="error_notFound_short">Unknown</string>
    <string name="nodeTemplate_motivateMeBtn_contentDescription">MotivateMeToggle is used to turn motivational notifications on.</string>
    <string name="nodeTemplate_editBtn_contentDescription">Edit-Button is used to modify an existing countdown.</string>
    <string name="nodeTemplate_deleteBtn_contentDescription">Delete-Button is used to delete an existing countdown.</string>
    <string name="nodeTemplate_openCountdownBtn_contentDescription">Open-Button is used to calculate/open the current countdown.</string>
    <string name="nodeTemplate_eventMsg_icon_error">Error-Icon when message was not set.</string>
    <string name="mainActivity_swipeLayout_topMenu_openCountdown_text">Open countdown</string>
    <string name="mainActivity_swipeLayout_onClickInstruction">Swipe left or right for options.</string>
    <string name="mainActivity_swipeRefreshLayout_pulledDown_refreshDone">Refreshed displayed content and restarted notification services.</string>
    <string name="mainActivity_noCountdownsFound">No countdowns found.</string>
    <string name="mainActivity_deletedCountdown">Deleted countdown.</string>
    <string name="mainActivity_deletedAllCountdowns">Deleted all countdowns.</string>
    <string name="mainActivity_countdownMotivationToggleOnOff">Countdown motivation got %1$s.</string>
    <string name="mainActivity_countdownMotivationToggleOnOff_activated">activated</string>
    <string name="mainActivity_countdownMotivationToggleOnOff_deactivated">deactivated</string>
    <string name="mainActivity_countdownNode_error_nodeTagWrongBuild">Could not perform action. Node maybe wrong build.</string>
    <string name="mainActivity_countdownNode_error_categoryColorWrongRetained">Category color could not be applied. We chose one for you.</string>
    <string name="mainActivity_countdownNode_DateTimeValues" translatable="false">%1$s - %2$s</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_title">Delete countdown?</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_description">By clicking \'Delete\' your countdown will be deleted. This action can\'t be undone!</string>
    <string name="mainActivity_countdownNode_deleteAll_warningDialog_title">Delete all countdowns?</string>
    <string name="mainActivity_countdownNode_deleteAll_warningDialog_description">By clicking \'Delete\' ALL countdowns will be deleted. This action can\'t be undone!</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_yesDelete">Delete</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_noCancel">Cancel</string>
    <string name="node_countdownTitleError404">Countdown not found</string>
    <string name="node_countdownDescriptionError404">Please contact system administrator.</string>
    <string name="node_countdownEventMsg_nothingFound">Nothing interesting</string>
    <string name="node_countdownEventMsg_countdownNotStartedYet">Starts on %1$s</string>
    <string name="node_countdownEventMsg_countdownRunning">Running (%1$s)</string>
    <string name="node_countdownEventMsg_countdownRunning_MotivationStatus_active">Motivating</string>
    <string name="node_countdownEventMsg_countdownRunning_MotivationStatus_inactive">Not motivating</string>
    <string name="node_countdownEventMsg_countdownExpired">Expired on %1$s</string>
    <string name="setting_forwardCompatibility_title">Forward compatibility</string>
    <string name="setting_forwardCompatibility_description">If activated this app will use broadcast receivers to show notifications, because newer phones limit background services. You should only disable this function, if notifications do not show up as expected (e.g. shorter intervals on newer phones tend to work better when you deactivate this setting). Keep in mind that the forward compatibility mode gets tested more often, has more functions and is more reliable.</string>
    <string name="setting_saveBattery_title">Save battery</string>
    <string name="setting_saveBattery_description">If activated notifications might not show up on-time. Works only with forward compatibility.</string>
    <string name="setting_durationOfInAppNotifications_title">Duration of In-App-Notifications</string>
    <string name="setting_durationOfInAppNotifications_description">The higher the no. (labelled in seconds) the longer an in-app-notification will be displayed on screen. In-app-notifications are only displayed when you click on a motivational notification.</string>
    <string name="countdownActivity_countdownNotFound">Countdown not found.</string>
    <string name="countdownActivity_countdownMainCounter_zero" translatable="false">00:00:00:00</string>
    <string name="countdownActivity_countdownSubCounter_zero">00.00</string>
    <string name="countdownActivity_countdownSubCounter_totalYears_label">Years</string>
    <string name="countdownActivity_countdownSubCounter_totalMonths_label">Months</string>
    <string name="countdownActivity_countdownSubCounter_totalWeeks_label">Weeks</string>
    <string name="countdownActivity_countdownSubCounter_totalDays_label">Days</string>
    <string name="countdownActivity_countdownSubCounter_totalHours_label">Hours</string>
    <string name="countdownActivity_countdownSubCounter_totalMinutes_label">Minutes</string>
    <string name="countdownActivity_countdownSubCounter_totalSeconds_label">Seconds</string>
    <string name="countdownActivity_inAppNotification_error404_title">System error</string>
    <string name="countdownActivity_inAppNotification_error404_description">Please report this issue to the system administrator.</string>
    <string-array name="inAppNotificationShowSpinner_LABELS_VALUES">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string name="countdownActivity_countdownDetails_randomQuotes_titleLbl">Random quote</string>
    <string name="countdownActivity_countdownDetails_randomQuotes_quoteNotFound">Found no suitable quote. :(</string>
    <string name="countdownActivity_countdownDetails_randomQuotes_quoteGeneratorPause">Disabled auto-refresh.</string>
    <string name="countdownActivity_countdownDetails_randomQuotes_quoteGeneratorPlay">Enabled auto-refresh.</string>
    <string name="modifyCountdownActivity_countdown_title_label">Title</string>
    <string name="modifyCountdownActivity_countdown_title_edittext_exampleValue">Work</string>
    <string name="modifyCountdownActivity_countdown_description_label">Description</string>
    <string name="modifyCountdownActivity_countdown_description_edittext_exampleValue">Being vendor in IKEA</string>
    <string name="modifyCountdownActivity_countdown_fromDateTime_label">From</string>
    <string name="modifyCountdownActivity_countdown_fromDateTime_textview_exampleValue" translatable="false">15.12.2017 08:00:00</string>
    <string name="modifyCountdownActivity_countdown_untilDateTime_label">Until</string>
    <string name="modifyCountdownActivity_countdown_untilDateTime_textview_exampleValue" translatable="false">15.12.2018 08:00:00</string>
    <string name="modifyCountdownActivity_countdown_category_label">Category</string>
    <string name="modifyCountdownActivity_countdown_category_textview_fieldDescription">Color will be used e.g. for notifications (led-color, &#8320;)</string>
    <string name="modifyCountdownActivity_countdown_interval_textview_fieldDescription">Short intervals (e.g. 5 seconds) might not execute on point (battery-saving). If you insist on it, you can turn the Forward-Compatibility setting off!</string>
    <string name="modifyCountdownActivity_countdown_motivateMe_label">Motivate me</string>
    <string name="modifyCountdownActivity_countdown_motivateMeInterval_label">Interval</string>
    <string name="modifyCountdownActivity_countdown_showLiveCountdown_label">Live countdown</string>
    <string name="modifyCountdownActivity_countdown_validation_UntilAfterStartDateTime">UntilDateTime needs to be AFTER StartDateTime!</string>
    <string name="modifyCountdownActivity_countdown_validation_DateTimeNotValid">DateTime is not valid! This might be an internal error.</string>
    <string name="modifyCountdownActivity_countdown_validation_LengthConstraints">%1$s must have %2$d - %3$d chars!</string>
    <string name="creditsActivity_floatingButton_contactAppOwnerMailIntent_mail_subject">SurviveTheDay: Review</string>
    <string name="creditsActivity_floatingButton_contactAppOwnerMailIntent_mail_body">Please only German or English messages. :)</string>
    <string name="creditsActivity_floatingButton_contactAppOwnerMailIntent_mail_intentTitle">Send e-mail..</string>
    <string name="creditsActivity_drawableCreditTemplate">
        <![CDATA[
            "<div><b>%1$s Icon</b><br />Icons made by <a href=\"%2$s\" title=\"%3$s\">%3$s</a> from <br /><a href=\"%4$s\" title=\"%5$s\">%4$s</a> is licensed by <br /><a href=\"http://creativecommons.org/licenses/by/3.0/\" title=\"Creative Commons BY 3.0\" target=\"_blank\">CC 3.0 BY</a></div></string>
    <string name="creditsActivity_drawableCreditTemplate_app">App</string>
    <string name="creditsActivity_drawableCreditTemplate_conversationMark">Conversation mark</string>
    <string name="creditsActivity_drawableCreditTemplate_stopTimer">Stoptimer</string>
    <string name="inAppProductsNode_default_title">Product could not be loaded</string>
    <string name="inAppProductsNode_default_description">Maybe you have no active internet connection or this is an internal error. </string>
    <string name="inAppProductsNode_default_price">0.00 €</string>
</resources>