<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/countdownId_0"
    style="@style/inappProductNode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_shadow_rectangle"
    android:layout_marginBottom="-10dp">
    <!-- Only add this programmatically: android:tag="COUNTDOWN_0"-->

    <TextView
        android:id="@+id/inappProductTitle"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/inAppProductsNode_default_title" />
    <TextView
        android:id="@+id/inappProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/inAppProductsNode_default_price"/>
    <TextView
        android:id="@+id/inappProductDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/inappProductTitle"
        android:text="@string/inAppProductsNode_default_description"/>
    <TextView
        android:id="@+id/inappProductStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inAppProductsNode_default_status"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/inappProductDescription"/>


</RelativeLayout>