<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsRLforAd"
    tools:context="kevkevin.wsdt.tagueberstehen.AppSettingsActivity">
    <!-- Relative Layout for Banner Ad -->

    <TextView
        android:id="@+id/versionNameLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/app_version_label"
        android:paddingEnd="60dp"
        android:paddingLeft="40dp"
        android:paddingRight="60dp"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Version name in gradle build defined, bc of that it is not detected by AS -->
    <TextView
        android:id="@+id/versionName"
        android:textColor="@color/colorPrimary"
        android:text="@string/versionName"
        android:layout_alignEnd="@+id/versionNameLabel"
        android:layout_alignRight="@+id/versionNameLabel"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/settingsList"
            android:orientation="vertical"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Use Forward compatiblity -->
            <TableRow
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/setting_forwardCompatibility_title"
                    style="@style/settingText"
                    android:layout_weight="1"/>
                <Switch
                    android:id="@+id/useForwardCompatibility"
                    android:checked="true"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">
                <!-- description for row above -->
                <TextView
                    android:text="@string/setting_forwardCompatibility_description"
                    android:textColor="@color/colorLightdark"
                    android:layout_span="2" />
            </TableRow>


            <!-- Save battery (works only if forwardCompatibility ON -> SO only show if activated) -->
            <TableRow
                android:id="@+id/saveBattery_ROW"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/setting_saveBattery_title"
                    style="@style/settingText"
                    android:layout_weight="1"/>
                <Switch
                    android:id="@+id/saveBattery"
                    android:checked="false"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:id="@+id/saveBatteryDescription"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">
                <!-- description for row above -->
                <TextView
                    android:text="@string/setting_saveBattery_description"
                    android:textColor="@color/colorLightdark"
                    android:layout_span="2" />
            </TableRow>

            <!-- In app notification - how long to show -->
            <TableRow
                android:id="@+id/inappNotificationHowLongToShow_ROW"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">


                <TextView
                    android:text="@string/setting_durationOfInAppNotifications_title"
                    style="@style/settingText"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/inappNotificationHowLongToShowValue"
                    android:background="@color/colorSlightlygrey"
                    android:spinnerMode="dropdown"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:id="@+id/inappNotificationHowLongToShowDescription"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_width="match_parent">
                <!-- description for row above -->
                <TextView
                    android:text="@string/setting_durationOfInAppNotifications_description"
                    android:textColor="@color/colorLightdark"
                    android:layout_span="2" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <!-- here will be banner ad added programmatically -->
</RelativeLayout>
