<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    style="@style/ContentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kevkevin.wsdt.tagueberstehen.CountdownActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/countdownCounter"
                style="@style/Countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:text="@string/countdownActivity_countdownMainCounter_zero" />


            <!-- YEARS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterYearsLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/countdownCounter"
                android:text="@string/countdownActivity_countdownSubCounter_totalYears_label" />

            <TextView
                android:id="@+id/countdownCounterYears"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/countdownCounter"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- MONTHS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterMonthsLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countdownCounterYears"
                android:text="@string/countdownActivity_countdownSubCounter_totalMonths_label" />

            <TextView
                android:id="@+id/countdownCounterMonths"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/countdownCounterYears"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- WEEKS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterWeeksLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countdownCounterMonths"
                android:text="@string/countdownActivity_countdownSubCounter_totalWeeks_label" />

            <TextView
                android:id="@+id/countdownCounterWeeks"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/countdownCounterMonths"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- DAYS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterDaysLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/countdownCounterWeeks"
                android:text="@string/countdownActivity_countdownSubCounter_totalDays_label" />

            <TextView
                android:id="@+id/countdownCounterDays"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/countdownCounterWeeks"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- HOURS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterHoursLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countdownCounterDays"
                android:text="@string/countdownActivity_countdownSubCounter_totalHours_label" />

            <TextView
                android:id="@+id/countdownCounterHours"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/countdownCounterDays"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- MINUTES ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterMinutesLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countdownCounterHours"
                android:text="@string/countdownActivity_countdownSubCounter_totalMinutes_label" />

            <TextView
                android:id="@+id/countdownCounterMinutes"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/countdownCounterHours"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />

            <!-- SECONDS ++++++++++++++++++++++++++++++++++++++++++++++ -->
            <TextView
                android:id="@+id/countdownCounterSecondsLabel"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countdownCounterMinutes"
                android:text="@string/countdownActivity_countdownSubCounter_totalSeconds_label" />

            <TextView
                android:id="@+id/countdownCounterSeconds"
                style="@style/CountdownSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="35dp"
                android:layout_below="@+id/countdownCounterMinutes"
                android:text="@string/countdownActivity_countdownSubCounter_zero" />
        </RelativeLayout>
    </ScrollView>

    <!-- QUOTE VIEW (will be shown for a specific period of time when opening this activity from a notification) -->
    <RelativeLayout
        android:id="@+id/notificationContent"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.95"
        android:background="@drawable/shape_inappnotification_template">

        <ImageView
            android:id="@+id/notificationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="9dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:maxWidth="25dp"
            android:maxHeight="25dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="Notification Icon"
            android:src="@drawable/warning" />

        <!-- Mit absicht heading heller als fulltext -->
        <TextView
            android:id="@+id/notificationHeading"
            style="@style/CountdownSmall"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/notificationImage"
            android:layout_toRightOf="@+id/notificationImage"
            android:text="@string/countdownActivity_inAppNotification_error404_title" />

        <TextView
            android:id="@+id/notificationFullText"
            style="@style/CountdownSmall"
            android:textColor="@color/colorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationHeading"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:text="@string/countdownActivity_inAppNotification_error404_description"
            android:textSize="13sp" />
    </RelativeLayout>
</RelativeLayout>

